load("@build_bazel_rules_nodejs//:index.bzl", "copy_to_bin")

# Expose those targets as they are required as part of
# other packages builds and need to be included as inputs
exports_files(
  [
    "package.json",
    "tsconfig.base.json",
    "tsconfig.json",
  ],
  visibility = ["//visibility:public"]
)

copy_to_bin(
  name = "copy_tsconfig_base",
  srcs = [
      "tsconfig.base.json"
  ]
)

filegroup(
  name = "build_ts_refs",
  srcs = [
      ":copy_tsconfig_base",
      "//packages:build",
      "//src/core:build_ts_refs"
  ],
)

alias(
  name = "bootstrap",
  actual = ":build_ts_refs",
)
