# Expose those targets as they are required as part of
# other packages builds and need to be included as inputs
exports_files(
  [
    "tsconfig.base.json",
    "tsconfig.bazel.json",
    "tsconfig.browser.json",
    "tsconfig.browser_bazel.json",
    "tsconfig.json",
    "package.json"
  ],
  visibility = ["//visibility:public"]
)
