# Define the workspace base name and a managed directory by bazel
# that will hold the node_modules called @npm
workspace(
  name = "kibana",
  managed_directories = {"@npm": ["node_modules"]},
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Fetch Node.js rules
http_archive(
  name = "build_bazel_rules_nodejs",
  patch_args = ["-p1"],
  patches = ["//:src/dev/bazel/rules_nodejs_patches/normalized_paths_for_windows_runfiles.patch"],
  sha256 = "6f15d75f9e99c19d9291ff8e64e4eb594a6b7d25517760a75ad3621a7a48c2df",
  urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/4.7.0/rules_nodejs-4.7.0.tar.gz"],
)

# Now that we have the rules let's import from them to complete the work
load("@build_bazel_rules_nodejs//:index.bzl", "node_repositories", "yarn_install")

# Setup the Node.js toolchain for the architectures we want to support
node_repositories(
  node_repositories = {
    "22.17.1-darwin_amd64": ("node-v22.17.1-darwin-x64.tar.gz", "node-v22.17.1-darwin-x64", "b925103150fac0d23a44a45b2d88a01b73e5fff101e5dcfbae98d32c08d4bee3"),
    "22.17.1-darwin_arm64": ("node-v22.17.1-darwin-arm64.tar.gz", "node-v22.17.1-darwin-arm64", "a983f4f2a7b71512b78d7935b9ccf6b72120a255810070afd635c4146bca7b31"),
    "22.17.1-linux_arm64": ("node-v22.17.1-linux-arm64.tar.xz", "node-v22.17.1-linux-arm64", "37bb596033e6477b5cec845ab18fd02bc6dc8af846f1ace813a005e91298e9ea"),
    "22.17.1-linux_amd64": ("node-v22.17.1-linux-x64.tar.xz", "node-v22.17.1-linux-x64", "45431ec948e80f63819de4767581e838119bc9a13daa15805b205f447d086bee"),
    "22.17.1-windows_amd64": ("node-v22.17.1-win-x64.zip", "node-v22.17.1-win-x64", "b1fdb5635ba860f6bf71474f2ca882459a582de49b1d869451e3ad188e3943eb"),
  },
  node_version = "22.17.1",
  node_urls = [
    "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache/node-glibc-217/dist/v{version}/{filename}",
  ],
  yarn_repositories = {
    "1.22.21": ("yarn-v1.22.21.tar.gz", "yarn-v1.22.21", "a55bb4e85405f5dfd6e7154a444e7e33ad305d7ca858bad8546e932a6688df08"),
  },
  yarn_version = "1.22.21",
  yarn_urls = [
    "https://github.com/yarnpkg/yarn/releases/download/v{version}/{filename}",
  ],
)

# Run yarn_install rule to take care of dependencies
#
# NOTE: FORCE_COLOR env var forces colors on non tty mode
yarn_install(
  name = "npm",
  package_json = "//:package.json",
  yarn_lock = "//:yarn.lock",
  data = [
    "//:.yarnrc",
    "//:preinstall_check.js",
  ],
  exports_directories_only = True,
  symlink_node_modules = True,
  quiet = False,
  frozen_lockfile = False,
  environment = {
    "GECKODRIVER_CDNURL": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache",
    "CHROMEDRIVER_CDNURL": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache",
    "CHROMEDRIVER_CDNBINARIESURL": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache",
    "CYPRESS_DOWNLOAD_MIRROR": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache/cypress",
  }
)
