# Define the workspace base name and a managed directory by bazel
# that will hold the node_modules called @npm
workspace(
  name = "kibana",
  managed_directories = {"@npm": ["node_modules"]},
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Fetch Node.js rules
http_archive(
  name = "build_bazel_rules_nodejs",
  patch_args = ["-p1"],
  patches = ["//:src/dev/bazel/rules_nodejs_patches/normalized_paths_for_windows_runfiles.patch"],
  sha256 = "6f15d75f9e99c19d9291ff8e64e4eb594a6b7d25517760a75ad3621a7a48c2df",
  urls = ["https://github.com/bazelbuild/rules_nodejs/releases/download/4.7.0/rules_nodejs-4.7.0.tar.gz"],
)

# Now that we have the rules let's import from them to complete the work
load("@build_bazel_rules_nodejs//:index.bzl", "node_repositories", "yarn_install")

# Setup the Node.js toolchain for the architectures we want to support
node_repositories(
  node_repositories = {
    "20.19.4-darwin_amd64": ("node-v20.19.4-darwin-x64.tar.gz", "node-v20.19.4-darwin-x64", "cc47ed094c1876b211a9091d09a78537c1cbbb0f8cf5a49c9fd79933ee8fd7fd"),
    "20.19.4-darwin_arm64": ("node-v20.19.4-darwin-arm64.tar.gz", "node-v20.19.4-darwin-arm64", "8b89801f527a85e3f7de539512c9dde08673ac99db6458cc7cc627e05d707054"),
    "20.19.4-linux_arm64": ("node-v20.19.4-linux-arm64.tar.xz", "node-v20.19.4-linux-arm64", "5dfd5c678caa8daeed651c646708e46e1a16f2d61782c47a7d3005fbcd53086a"),
    "20.19.4-linux_amd64": ("node-v20.19.4-linux-x64.tar.xz", "node-v20.19.4-linux-x64", "4501ffc7e85d1f0e0d62598d99a8843694d4a79bbeb2e4e886e67e5af099a1ac"),
    "20.19.4-windows_amd64": ("node-v20.19.4-win-x64.zip", "node-v20.19.4-win-x64", "1bf83e5958157d13673507349238236aec4f6efc95cf426cbe126a999a3e4c0b"),
  },
  node_version = "20.19.4",
  node_urls = [
    "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache/dist/v{version}/{filename}",
  ],
  yarn_repositories = {
    "1.22.21": ("yarn-v1.22.21.tar.gz", "yarn-v1.22.21", "a55bb4e85405f5dfd6e7154a444e7e33ad305d7ca858bad8546e932a6688df08"),
  },
  yarn_version = "1.22.21",
  yarn_urls = [
    "https://github.com/yarnpkg/yarn/releases/download/v{version}/{filename}",
  ],
)

# Run yarn_install rule to take care of dependencies
#
# NOTE: FORCE_COLOR env var forces colors on non tty mode
yarn_install(
  name = "npm",
  package_json = "//:package.json",
  yarn_lock = "//:yarn.lock",
  data = [
    "//:.yarnrc",
    "//:preinstall_check.js",
  ],
  exports_directories_only = True,
  symlink_node_modules = True,
  quiet = False,
  frozen_lockfile = False,
  environment = {
    "GECKODRIVER_CDNURL": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache",
    "CHROMEDRIVER_CDNURL": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache",
    "CHROMEDRIVER_CDNBINARIESURL": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache",
    "CYPRESS_DOWNLOAD_MIRROR": "https://us-central1-elastic-kibana-184716.cloudfunctions.net/kibana-ci-proxy-cache/cypress",
  }
)
