load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//src/dev/bazel:index.bzl", "jsts_transpiler", "pkg_npm", "pkg_npm_types", "ts_project")

PKG_BASE_NAME = "kbn-optimizer"
PKG_REQUIRE_NAME = "@kbn/optimizer"

SOURCE_FILES = glob(
  [
    "src/**/*.ts",
  ],
  exclude = [
    "**/*.test.*",
    "**/__fixtures__/**",
    "**/__snapshots__/**",
  ],
)

SRCS = SOURCE_FILES

filegroup(
  name = "srcs",
  srcs = SRCS,
)

NPM_MODULE_EXTRA_FILES = [
  "limits.yml",
  "package.json",
  "postcss.config.js",
  "README.md"
]

RUNTIME_DEPS = [
  "//packages/kbn-config",
  "//packages/kbn-config-schema",
  "//packages/kbn-dev-utils",
  "//packages/kbn-std",
  "//packages/kbn-ui-shared-deps-npm",
  "//packages/kbn-ui-shared-deps-src",
  "//packages/kbn-utils",
  "//packages/kbn-synthetic-package-map",
  "@npm//@babel/core",
  "@npm//chalk",
  "@npm//clean-webpack-plugin",
  "@npm//compression-webpack-plugin",
  "@npm//cpy",
  "@npm//dedent",
  "@npm//del",
  "@npm//execa",
  "@npm//json-stable-stringify",
  "@npm//js-yaml",
  "@npm//lmdb-store",
  "@npm//loader-utils",
  "@npm//node-sass",
  "@npm//normalize-path",
  "@npm//pirates",
  "@npm//rxjs",
  "@npm//source-map-support",
  "@npm//watchpack",
  "@npm//webpack",
  "@npm//webpack-merge",
  "@npm//webpack-sources",
  "@npm//zlib"
]

TYPES_DEPS = [
  "//packages/kbn-config:npm_module_types",
  "//packages/kbn-config-schema:npm_module_types",
  "//packages/kbn-dev-utils:npm_module_types",
  "//packages/kbn-std:npm_module_types",
  "//packages/kbn-ui-shared-deps-npm:npm_module_types",
  "//packages/kbn-ui-shared-deps-src:npm_module_types",
  "//packages/kbn-utils:npm_module_types",
  "//packages/kbn-synthetic-package-map:npm_module_types",
  "@npm//chalk",
  "@npm//clean-webpack-plugin",
  "@npm//cpy",
  "@npm//del",
  "@npm//execa",
  "@npm//lmdb-store",
  "@npm//pirates",
  "@npm//rxjs",
  "@npm//zlib",
  "@npm//@types/babel__core",
  "@npm//@types/compression-webpack-plugin",
  "@npm//@types/dedent",
  "@npm//@types/jest",
  "@npm//@types/json-stable-stringify",
  "@npm//@types/js-yaml",
  "@npm//@types/loader-utils",
  "@npm//@types/node",
  "@npm//@types/normalize-path",
  "@npm//@types/source-map-support",
  "@npm//@types/watchpack",
  "@npm//@types/webpack",
  "@npm//@types/webpack-merge",
  "@npm//@types/webpack-sources",
]

jsts_transpiler(
  name = "target_node",
  srcs = SRCS,
  build_pkg_name = package_name(),
)

ts_config(
  name = "tsconfig",
  src = "tsconfig.json",
  deps = [
    "//:tsconfig.base.json",
    "//:tsconfig.bazel.json",
  ],
)

ts_project(
  name = "tsc_types",
  args = ['--pretty'],
  srcs = SRCS,
  deps = TYPES_DEPS,
  declaration = True,
  emit_declaration_only = True,
  out_dir = "target_types",
  root_dir = "src",
  tsconfig = ":tsconfig",
)

js_library(
  name = PKG_BASE_NAME,
  srcs = NPM_MODULE_EXTRA_FILES,
  deps = RUNTIME_DEPS + [":target_node"],
  package_name = PKG_REQUIRE_NAME,
  visibility = ["//visibility:public"],
)

pkg_npm(
  name = "npm_module",
  deps = [
    ":%s" % PKG_BASE_NAME,
  ]
)

filegroup(
  name = "build",
  srcs = [
    ":npm_module",
  ],
  visibility = ["//visibility:public"],
)

pkg_npm_types(
  name = "npm_module_types",
  srcs = SRCS,
  deps = [":tsc_types"],
  package_name = PKG_REQUIRE_NAME,
  tsconfig = ":tsconfig",
  visibility = ["//visibility:public"],
)

filegroup(
  name = "build_types",
  srcs = [
    ":npm_module_types",
  ],
  visibility = ["//visibility:public"],
)
