# Build args reference: https://www.chromium.org/developers/gn-build-configuration/

import("//build/args/headless.gn")

is_debug = false

symbol_level = 0

is_component_build = false

enable_nacl = false

# Please, consult @elastic/kibana-security before changing/removing this option.
use_kerberos = false

# target_cpu is added at build time
