package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//internal/node:node.bzl", "nodejs_binary")

exports_files(
  [
    "package_json.mustache",
    "api_extractor.js"
  ],
  visibility = ["//visibility:public"]
)

nodejs_binary(
  name = "_packager",
  data = [
    "@npm//@bazel/typescript",
    "@npm//@microsoft/api-extractor",
    "@npm//mustache"
  ],
  entry_point = ":api_extractor.js",
)
