package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//internal/node:node.bzl", "nodejs_binary")

filegroup(
  name = "packager_all_files",
  srcs = glob([
    "packager/*",
  ]),
)

exports_files(
  [
    "package_json.mustache",
  ],
  visibility = ["//visibility:public"]
)

nodejs_binary(
  name = "_packager",
  data = [
    "@npm//@bazel/typescript",
    "@npm//@microsoft/api-extractor",
    "@npm//mustache",
    ":packager_all_files"
  ],
  entry_point = ":packager/index.js",
)
